# atomic-operator

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  config.example.yml  docker-compose.yml  example.yaml.conf  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  versions.json
.github/: FUNDING.yml
.github/workflows/: code_coverage.yml  docs.yml  macos.yml  main.yml  quality.yml  ubuntu.yml  windows.yml
0.8.5/: 404.html  index.html  objects.inv  sitemap.xml
0.8.5/CHANGELOG/: index.html
0.8.5/CONTRIBUTING/: index.html
0.8.5/LICENSE/: index.html
0.8.5/atomic-operator/: index.html
0.8.5/atomic-operator-config/: index.html
0.8.5/atomic-operator-ref/: index.html
0.8.5/atomics/: index.html
0.8.5/execution-ref/: index.html
0.8.5/models-ref/: index.html
0.8.5/running-tests-command-line/: index.html
0.8.5/running-tests-script/: index.html
0.8.5/search/: search_index.json
0.8.5/windows-remote/: index.html
atomic_operator/: __init__.py  __main__.py  __meta__.py  adversary_emulation.py  art.py  atomic_operator.py  atomic_red_team.py  base.py  config.py  configparser.py  models.py  parser.py  runlist.py
atomic_operator/atomic/: atomic.py  atomictest.py  base.py  emulation.py  loader.py  semversion.py
atomic_operator/data/: logging.yml
atomic_operator/execution/: __init__.py  awsrunner.py  copier.py  localrunner.py  remoterunner.py  runner.py  statemachine.py
atomic_operator/frameworks/: __init__.py  atomic.py  atomictest.py  base.py  emulation.py  loader.py
atomic_operator/utils/: exceptions.py  logger.py  version.py
docs/: CHANGELOG.md  CNAME  README.md  adversary-emulation.md  atomic-operator-config.md  atomic-operator-ref.md  atomic-operator.md  atomic-red-team.md  atomics.md  execution-ref.md  frameworks-ref.md  get_content.md  index.md  models-ref.md  running-plans-command-line.md  running-plans-script.md  running-tests-command-line.md  running-tests-script.md  windows-remote.md
latest/: 404.html  index.html
latest/CHANGELOG/: index.html
latest/CONTRIBUTING/: index.html
latest/LICENSE/: index.html
latest/atomic-operator/: index.html
latest/atomic-operator-config/: index.html
latest/atomic-operator-ref/: index.html
latest/atomics/: index.html
latest/execution-ref/: index.html
latest/models-ref/: index.html
latest/running-tests-command-line/: index.html
latest/running-tests-script/: index.html
latest/windows-remote/: index.html
tests/: conftest.py  test_ability_to_find_atomics.py  test_adversary_plan.py  test_art.py  test_art_atomic.py  test_art_loader.py  test_atomic_operator_base.py  test_config_parser.py
tests/data/: atomic_operator_config.yml  test_atomic.yml  test_atomic2.yml  test_emulation_plan.yml
